--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,16 @@ app.host=http://localhost:8080
 
 # HTML <FORM>에서 th:method에서 PUT 또는 DELETE를 사용해서 보내는 _method를 사용해서  @PutMapping과 @DeleteMapping으로 요청을 맵핑.
 # spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.mail.host=mail.g2works.kr
+spring.mail.port=587
+
+# 본인 gmail 계정으로 바꾸세요.
+spring.mail.username=cpcad@enuri.com
+
+# 위에서 발급받은 App 패스워드로 바꾸세요.
+spring.mail.password=Enuricpc1!
+spring.mail.sender='ebad@enuri.com(ES Batch Report)'
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=false
